# isca_val_ui

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/isca_val_ui/: main_ui.py
src/isca_val_ui/model/: authors.py  checklist.py  papers.py
src/isca_val_ui/resources/qml/: main.qml
src/isca_val_ui/resources/qml/components/: AbstractPanel.qml  AnnotationPanel.qml  AuthorPanel.qml  CheckingStatusPanel.qml  PdfBrowser.qml  TitlePanel.qml
src/isca_val_ui/resources/qml/components/authors/: AuthorItem.qml
