[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61",
]

[project]
name = "isca_val_ui"
version = "0.1.4"
description='Toolkit to validate the input of the ISCA Archive'
readme = {file="README.md", content-type = "text/markdown"}
authors = [
     {name="Sébastien Le Maguer", email="sebastien.lemaguer@helsinki.fi"}
]
requires-python = ">=3.11"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Programming Language :: Python :: 3',
]
dependencies = [
    'PySide6==6.11.1',
    'PySide6_Addons==6.11.1',
    'PySide6_Essentials==6.11.1',
    'ruamel.yaml>=0.18.13',
    'importlib_resources'
]

[project.optional-dependencies]
dev = [
    "black",
    "basedpyright",
    "flake8",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/ISCACoordinator/isca_val_ui"
Issues = "https://github.com/ISCACoordinator/isca_val_ui/issues"
git = "https://github.com/ISCACoordinator/isca_val_ui/isca-archive.git"

[project.scripts]
isca_val_ui="isca_val_ui.main_ui:main"

[tool.setuptools.package-data]
flexeval = ["**/resources/**/*.*"]  # FIXME: this is a bit hardcore here

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[tool.flake8]
max-line-length = 120

[tool.basedpyright]
typeCheckingMode = "standard"
